2010-04-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `extensions'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `extensions'.

2010-04-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `stdarg'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `stdarg'.
	* autogen.sh: Make gnulib-tool invocation select between
	--update and --import based solely on presence of lib/ and m4/.

2010-04-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `errno'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `errno'.

2010-04-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `stdint'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `stdint'.
	(gl_AVOID): Add `wchar'.
	* configure.ac (PRESUMABLY_STANDARD_ENOUGH_BY_NOW):
	Remove `ac_cv_header_stdlib_h'.
	* autogen.sh: Add `--avoid wchar' to gnulib-tool invocation.

2010-04-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `stdbool'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `stdbool'.

2010-04-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `inline'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `inline'.

2010-04-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib to define `RCS_UNUSED'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `unused-parameter'.
	* configure.ac (unused): Delete RCS_CHECK_GCC_ATTRIBUTE.

2010-04-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Add gnulib infrastructure (but don't use it yet).

	* m4/gnulib-cache.m4: New file, from "gnulib-tool --import".
	* autogen.sh: Use gnulib-tool.
	* configure.ac (gl_EARLY, gl_INIT): New.
	(AC_PROG_RANLIB): Delete.
	(AC_CONFIG_FILES): Add lib/Makefile.
	* Makefile.am (SUBDIRS): Add lib.
	(EXTRA_DIST): Add m4/gnulib-cache.m4.
	(ACLOCAL_AM_FLAGS): New var.

2010-03-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use GNU Automake.

	* doc/Makefile.am: New file.
	* doc/Makefile.in: Delete file.
	* THANKS: New file.
	* AUTHORS, NEWS: Update.
	* Makefile.am: New file.