@@ -1,3 +1,11 @@
+2010-04-02  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[build] Move GCC attribute configuration into base.h.
+
+	* base.h (exiting, printf_string): Define these
+	macros based solely on GCC version -- 2.7 or higher.
+	(printf_string_exiting): Define macro unconditionally.
+
 2010-04-01  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[build] Use gnulib module `stdbool'.
